--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "lucana-m <lucana_monica@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.11",
@@ -18,6 +21,7 @@
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.3",
     "@types/pg": "^8.10.1",
